# SudokuSolver

./: .coveragerc  .gitignore  Makefile  README.md  backend.dockerfile  docker-compose.yml  main.py  read_txt.py  requirements.txt  run.py  setup.py  sudoku_solver.py
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: build.yml
app/: package-lock.json  package.json  vue.config.js
app/app/: package-lock.json  package.json
app/app/src/: App.vue
app/src/: App.vue
app/src/components/: AlertBox.vue  HoverCard.vue  LoadingSpinner.vue  SolveBoard.vue  SudokuBoard.vue  (+1 more)
core/: .coveragerc  .gitignore  Makefile  dev_requirements.txt  pyproject.toml  requirements.txt  ruff.toml  run.py  setup.py  sudoku_generator.py  sudoku_solver.py
core/api/sudoku/: client.py
core/boards/: board_4.txt
core/common/: classes.py
core/displayers/: interface.py  terminal.py
core/rust-src/: Cargo.toml  pyproject.toml
core/rust-src/src/: lib.rs
core/server/: main.py
core/sudoku/: __init__.py  generator.py  run.py  solver.py  utils.py  validation.py  validator.py
core/tests/: test_solver.py  test_validation_methods.py
core/tests/api/sudoku/: test_client.py
core/tests/displayers/: test_terminal.py
core/tests/engine/: test_validation.py
core/tests/server/: test_main.py
core/tests/sudoku/: test_generator.py  test_solver.py  test_validation.py
displayers/: terminal.py
docker_files/: backend.dockerfile  frontend.dockerfile
terraform/: main.tf
tests/: board_1.txt  board_2.txt  board_3.txt  test_solver.py  test_validation_methods.py
(+5 files in other folders)
