[tool.poetry]
name = "sudoku"
version = "1.0.1"
description = "A library that can solve any sudoku board"
authors = ["Steven <stevencheung7@outlook.dk>"]
readme = "README.md"

[tool.poetry.scripts]
solve = "sudoku.run:main"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
nptyping = "^2.5.0"
tdqm = "^0.0.1"
flask = "^3.0.2"
flask-cors = "^4.0.1"
opentelemetry-instrumentation-flask = "^0.43b0"
maturin = "^1.4.0"
requests = "^2.32.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.0.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
coverage = "^7.4.1"
black = "^24.3.0"
flake8 = "^7.0.0"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
